# python-project-50

./: Makefile  README.md  pyproject.toml  pyproject.toml.save
.github/workflows/: main.yml
gendiff/modules/: find_and_sort.py  gendiff.py  generate_diff.py  parser.py
gendiff/scripts/: gendiff.py
gendiff/tests/: test_gendiff.py
gendiff/tests/fixtures/: file2.yml
